@@ -90,7 +90,6 @@
                 <version>3.15.0</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
-                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
@@ -98,7 +97,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.5</version>
                 <configuration>
-                    <argLine>@{argLine} --enable-preview -Djava.awt.headless=true</argLine>
+                    <argLine>@{argLine} -Djava.awt.headless=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -215,7 +214,6 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.12.0</version>
                 <configuration>
-                    <additionalOptions>--enable-preview</additionalOptions>
                     <source>${maven.compiler.release}</source>
                     <doclint>none</doclint>
                     <failOnError>false</failOnError>
@@ -267,7 +265,6 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <additionalOptions>--enable-preview</additionalOptions>
                             <source>${maven.compiler.release}</source>
                             <doclint>none</doclint>
                         </configuration>
